--- a/packages/practical-html5-projects/package.json
+++ b/packages/practical-html5-projects/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "A simple HTML5 Template for new projects.",
   "main": "index.js",
-  "devDependencies": {},
+  "devDep3endencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
